fix skil bar overflowing

--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ padding: 0 10px;
     font-size: 16px;
 }
 .skilbar{
-    height: 5px;
+    /* height: ; */
     width: 90%;
     border: 1px solid #00adb5;
     margin-left: 20px;
